--- a/dotfiles/shared/files/.config/sway/config
+++ b/dotfiles/shared/files/.config/sway/config
@@ -49,15 +49,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
-#
-# Example configuration:
-#
 exec setterm --blank 1 --powerdown 1
-exec swayidle timeout 600 'physlock -dms' before-sleep 'physlock -dms'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
+exec swayidle timeout 600 'if [ ! $(pgrep physlock) ]; then physlock -dms; fi'\
+             before-sleep 'if [ ! $(pgrep physlock) ]; then physlock -dms; fi'
 
 ### Input configuration
 #
